objects/DMAPP__AM_Plan_Team__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipName>Account_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Days_In_Plan__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to give this user read/write access</inlineHelpText>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Plan_Owner__c</fullName>
        <formula>DMAPP__Account_Plan__r.OwnerId =  DMAPP__User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Plan Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Last_Accessed_Date__c</fullName>
        <label>Last Accessed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Number_Of_Days_Accessed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Days Accessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Access_Ratio__c</fullName>
        <label>Plan Access Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan Team Member</label>
    <nameField>
        <label>Account Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>